# iron-api-example

./: .gitignore  Cargo.toml  Gemfile  Readme.md
spec/: spec_helper.rb
spec/acceptance/: api_spec.rb  hello_world_spec.rb
src/: main.rs
src/model/: item.rs  item_collection.rs  item_mapper.rs  mod.rs
